apps/production/downloader/deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: downloader
spec:
  replicas: 3
  progressDeadlineSeconds: 600
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: downloader
  template:
    spec:
      containers:
        - name: downloader
          image: artifactory.local.hejsan.xyz/docker/josmase/downloader:v0.0.69@sha256:9fe77855d3b178a30e4af3f5d018017d54431c8149b01b3b9a461eb0e19483cc
          resources:
            limits:
              memory: 512Mi
              cpu: "1"
            requests:
              memory: 256Mi
              cpu: "0.2"
