apps/production/downloader/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: downloader

spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`downloader.local.hejsan.xyz`)
      kind: Rule
      services:
        - name: downloader
          port: http
      middlewares:
        - name: default-headers

  tls:
    secretName: local-hejsan-xyz-tls
